OAuth para GET /videos e GET /videos/:id
